Enhance PlannerEndpoint with error handling and date parsing validation
- Added error handling for service failures in getRecipes and saveDayPlan methods.
- Updated getDayPlan to accept date as a string and parse it, throwing a BadRequestException for invalid formats.
- Introduced parseDate method to validate date format and handle DateTimeParseException.
- Added a ServiceLayerException to standardize error responses for service failures.